<resources>
    <string name="app_name">BookShelf</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
<!--    aad book fragment-->
    <string name="add_book_fragment_bookName">Book name</string>
    <string name="add_book_fragment_author">Author</string>
    <string name="add_book_fragment_path">Select a file</string>
    <string name="add_book_fragment_saveButton">Save</string>
    <string name="add_book_fragment_loadFile">Load File</string>

<!--    activity main-->
    <string name="main_activity_mainPage">Main page</string>
    <string name="main_activity_settings">Settings</string>
    <string name="main_activity_shelf">Shelf</string>
    <string name="main_activity_bookmarks">Bookmarks</string>
    <string name="main_activity_addBook">Add Book</string>

<!--   add bookmark  -->
    <string name="add_bookmark_bookmark">Bookmark text</string>
    <string name="add_bookmark_page">Page</string>
    <string name="add_bookmark_saveButton">Save</string>

<!--    main page-->
    <string name="main_page_favouriteBook">Favourite book</string>
    <string name="main_page_lastRead">Last read</string>
    <string name="main_page_lastBookmark">Last bookmark</string>

<!--    row bookmark-->
    <string name="row_bookmark_bookname">Insert a book</string>
    <string name="row_bookmark_deleteButton">Delete</string>

<!-- sample book view-->
    <string name="sample_book_author">Insert a book</string>
    <string name="sample_book_bookname">Book name</string>
    <string name="sample_book_openButton">Open</string>


<!--    settings-->
    <string name="settings_language">Language:</string>
    <string name="settings_langEngButton">English</string>
    <string name="settings_langHrButton">Croatian</string>
</resources>