<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddBookMarkFragment"
    android:id="@+id/addBookMarkFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/bookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/add_bookmark_bookmark"
            android:layout_margin="10dp"
            />
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pageNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/add_bookmark_page"
            android:layout_margin="10dp"
            />

        <Button
            android:id="@+id/saveBookmark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/add_bookmark_saveButton"/>
    </LinearLayout>

</FrameLayout>