<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/constraintLayout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp">
            <TextView
                android:id="@+id/author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_book_author"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                android:textSize="23dp"
                />
            <TextView
                app:layout_constraintStart_toEndOf="@+id/author"
                app:layout_constraintTop_toTopOf="parent"
                android:id="@+id/bookName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_book_bookname"
                android:textSize="23dp"
                />
        </LinearLayout>

        <LinearLayout
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="end"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/openBookButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_book_openButton"
                />
            <Button
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/row_bookmark_deleteButton"/>
            <CheckBox
                android:id="@+id/favourite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>