<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SettingsFragment"
    android:id="@+id/settingsFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">
<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Brightness: "-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_margin="20dp"/>-->
<!--        <SeekBar-->
<!--            android:id="@+id/brightnessSeekBar"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:max="100"-->
<!--            android:min="0"/>-->

<!--        <LinearLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:orientation="horizontal">-->
<!--            <TextView-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"-->
<!--                android:text="Colorblind mode"-->
<!--                android:layout_marginBottom="10dp"-->
<!--                android:layout_margin="20dp" />-->
<!--            <CheckBox-->
<!--                android:id="@+id/colorBlind"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="match_parent"/>-->
<!--        </LinearLayout>-->

<!--        <TextView-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="Delete all data?"-->
<!--            android:layout_marginBottom="10dp"-->
<!--            android:layout_margin="20dp"/>-->
<!--        <Button-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="delete"/>-->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_language"
            android:layout_marginBottom="10dp"
            android:layout_margin="20dp"/>
        <Button
            android:id="@+id/langEng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_langEngButton"/>
        <Button
            android:id="@+id/langCro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings_langHrButton"/>
    </LinearLayout>

</FrameLayout>